--- a/bienes raices/css/custom.css
+++ b/bienes raices/css/custom.css
@@ -3,6 +3,7 @@ html{
 }
 body{
 	font-family: 'Lato', sans-serif;
+	line-height: 2;
 }
 /** Globales **/
 .contenedor{
@@ -21,6 +22,19 @@ h3{
 h4{
 	font-size: 2.6rem;
 }
+/** Utilidades **/
+.seccion{
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+}
+.fw-300{
+	font-weight: 300; 
+	text-align: center;
+}
+.centrar-texto{
+	text-align: center;
+}
+
 /* Header */
 .site-header.inicio{
 	background-image: url(../img/header.jpg);
@@ -60,3 +74,17 @@ h4{
 .navegacion a:last-of-type{
 	margin-right: 0;
 }
+/** Iconos nosotros **/
+
+.iconos-nosotros{
+	display: flex;
+	justify-content: space-between;
+}
+.icono {
+	flex-basis: calc(33.3% - 1rem);
+	text-align: center;
+}
+.icono h3 {
+	text-transform: uppercase;
+}
+
