--- a/bienes raices/css/custom.css
+++ b/bienes raices/css/custom.css
@@ -1,11 +1,18 @@
 html{
+	font-size: border-box;
 	font-size: 62.5%; /** Reset para REMS  **/
+}
+*, *::before,*::after{
+	box-sizing: inherit;
 }
 body{
 	font-family: 'Lato', sans-serif;
 	line-height: 2;
 }
 /** Globales **/
+img{
+	max-width: 100%;
+}
 .contenedor{
 	max-width: 120rem; /** = 1200px **/
 	margin: 0 auto ;
@@ -34,7 +41,26 @@ h4{
 .centrar-texto{
 	text-align: center;
 }
-
+.d-block{
+	display: block !important;
+}
+/** Botones **/
+.boton{
+	color: white; 
+	font-weight: 700;
+	text-decoration: none;
+	font-size: 1.8rem;
+	padding: 1rem 3rem;
+	margin-top: 3rem;
+	display: inline-block;
+	text-align: center;
+}
+.boton-amarillo{
+	background-color: #E08709;
+}
+.boton-verde{
+	background-color: #71B100;
+}
 /* Header */
 .site-header.inicio{
 	background-image: url(../img/header.jpg);
@@ -87,4 +113,59 @@ h4{
 .icono h3 {
 	text-transform: uppercase;
 }
+/** Anuncios **/
+.contenedor-anuncios{
+	display: flex;
+	justify-content: space-between;
+}
+.anuncio{
+	flex-basis: calc(33.3% - 1rem);
+	border: 1px solid #B5B5B5 ; 
+	background-color: #F5F5F5;
+}
+.contenido-anuncio{
+	padding: 2rem;
+}
+.contenido-anuncio h3, 
+.contenido-anuncio p {
+	margin: 0;
+}
+.precio{
+	color: #71b100;
+	font-weight: 700;
+}
+.iconos-caracteristicas{
+	list-style: none;
+	padding: 0;
+	display: flex;
+	justify-content: space-evenly;
+}
+.iconos-caracteristicas li {
+	/*flex: 1; */
+	display: flex;
+}
+.iconos-caracteristicas li img{
+	margin-right: 2rem;
+}
+
+.ver-todas{
+	display: flex;
+	justify-content: flex-end;
+}
+.imagen-contacto{
+	background-image: url(../img/encuentra.jpg);
+	height: 40rem;
+	background-position: center center;
+	background-size: cover;
+	display: flex;
+	align-items: center;
+}
+.contenido-contacto {
+	flex: 1;
+	color: white;
+}
+.contenido-contacto p {
+	font-size: 1.8rem;
+}
+
 
