--- a/bienes raices/css/custom.css
+++ b/bienes raices/css/custom.css
@@ -1,171 +1,281 @@
-html{
-	font-size: border-box;
-	font-size: 62.5%; /** Reset para REMS  **/
+html {
+    font-size: border-box;
+    font-size: 62.5%;
+    /** Reset para REMS  **/
 }
-*, *::before,*::after{
-	box-sizing: inherit;
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
-body{
-	font-family: 'Lato', sans-serif;
-	line-height: 2;
+
+body {
+    font-family: 'Lato', sans-serif;
+    line-height: 2;
 }
+
 /** Globales **/
-img{
-	max-width: 100%;
+img {
+    max-width: 100%;
 }
-.contenedor{
-	max-width: 120rem; /** = 1200px **/
-	margin: 0 auto ;
+
+.contenedor {
+    max-width: 120rem;
+    /** = 1200px **/
+    margin: 0 auto;
 }
-h1{
-	font-size: 3.8rem;
+
+h1 {
+    font-size: 3.8rem;
 }
-h2{
-	font-size: 3.4rem;
+
+h2 {
+    font-size: 3.4rem;
 }
-h3{
-	font-size: 3rem;
+
+h3 {
+    font-size: 3rem;
 }
-h4{
-	font-size: 2.6rem;
+
+h4 {
+    font-size: 2.6rem;
 }
+
 /** Utilidades **/
-.seccion{
-	margin-top: 2rem;
-	margin-bottom: 2rem;
+.seccion {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
 }
-.fw-300{
-	font-weight: 300; 
-	text-align: center;
+
+.fw-300 {
+    font-weight: 300;
+    text-align: center;
 }
-.centrar-texto{
-	text-align: center;
+
+.centrar-texto {
+    text-align: center;
 }
-.d-block{
-	display: block !important;
+
+.d-block {
+    display: block !important;
 }
+
 /** Botones **/
-.boton{
-	color: white; 
-	font-weight: 700;
-	text-decoration: none;
-	font-size: 1.8rem;
-	padding: 1rem 3rem;
-	margin-top: 3rem;
-	display: inline-block;
-	text-align: center;
+.boton {
+    color: white;
+    font-weight: 700;
+    text-decoration: none;
+    font-size: 1.8rem;
+    padding: 1rem 3rem;
+    margin-top: 3rem;
+    display: inline-block;
+    text-align: center;
 }
-.boton-amarillo{
-	background-color: #E08709;
+
+.boton-amarillo {
+    background-color: #E08709;
 }
-.boton-verde{
-	background-color: #71B100;
+
+.boton-verde {
+    background-color: #71B100;
 }
+
 /* Header */
-.site-header.inicio{
-	background-image: url(../img/header.jpg);
-	background-position: center center;
-	background-size: cover;
-	height: 100vh;
-	min-height: 60rem;
+.site-header.inicio {
+    background-image: url(../img/header.jpg);
+    background-position: center center;
+    background-size: cover;
+    height: 100vh;
+    min-height: 60rem;
 }
-.contenido-header{
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+
+.contenido-header {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
 .contenido-header h1 {
-	color: white;
-	padding-bottom: 2rem;
-	max-width: 60rem;
-	line-height: 2;
+    color: white;
+    padding-bottom: 2rem;
+    max-width: 60rem;
+    line-height: 2;
 }
-.barra{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding-top: 3rem;
+
+.barra {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 3rem;
 }
+
 /** Navegacion **/
 .navegacion a {
-	color: white;
-	text-decoration: none;
-	font-size: 1.8rem; /** = A 18 px **/ 
-	margin-right: 2rem;
+    color: white;
+    text-decoration: none;
+    font-size: 1.8rem;
+    /** = A 18 px **/
+    margin-right: 2rem;
 }
-.navegacion a:hover{
-	color: #71B100;
+
+.navegacion a:hover {
+    color: #71B100;
 }
-.navegacion a:last-of-type{
-	margin-right: 0;
+
+.navegacion a:last-of-type {
+    margin-right: 0;
 }
+
 /** Iconos nosotros **/
 
-.iconos-nosotros{
-	display: flex;
-	justify-content: space-between;
+.iconos-nosotros {
+    display: flex;
+    justify-content: space-between;
 }
+
 .icono {
-	flex-basis: calc(33.3% - 1rem);
-	text-align: center;
+    flex-basis: calc(33.3% - 1rem);
+    text-align: center;
 }
+
 .icono h3 {
-	text-transform: uppercase;
+    text-transform: uppercase;
 }
+
 /** Anuncios **/
-.contenedor-anuncios{
-	display: flex;
-	justify-content: space-between;
+.contenedor-anuncios {
+    display: flex;
+    justify-content: space-between;
 }
-.anuncio{
-	flex-basis: calc(33.3% - 1rem);
-	border: 1px solid #B5B5B5 ; 
-	background-color: #F5F5F5;
+
+.anuncio {
+    flex-basis: calc(33.3% - 1rem);
+    border: 1px solid #B5B5B5;
+    background-color: #F5F5F5;
 }
-.contenido-anuncio{
-	padding: 2rem;
+
+.contenido-anuncio {
+    padding: 2rem;
 }
-.contenido-anuncio h3, 
+
+.contenido-anuncio h3,
 .contenido-anuncio p {
-	margin: 0;
+    margin: 0;
 }
-.precio{
-	color: #71b100;
-	font-weight: 700;
+
+.precio {
+    color: #71b100;
+    font-weight: 700;
 }
-.iconos-caracteristicas{
-	list-style: none;
-	padding: 0;
-	display: flex;
-	justify-content: space-evenly;
+
+.iconos-caracteristicas {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
 }
+
 .iconos-caracteristicas li {
-	/*flex: 1; */
-	display: flex;
-}
-.iconos-caracteristicas li img{
-	margin-right: 2rem;
+    /*flex: 1; */
+    display: flex;
 }
 
-.ver-todas{
-	display: flex;
-	justify-content: flex-end;
+.iconos-caracteristicas li img {
+    margin-right: 2rem;
 }
-.imagen-contacto{
-	background-image: url(../img/encuentra.jpg);
-	height: 40rem;
-	background-position: center center;
-	background-size: cover;
-	display: flex;
-	align-items: center;
+
+.ver-todas {
+    display: flex;
+    justify-content: flex-end;
 }
+
+.imagen-contacto {
+    background-image: url(../img/encuentra.jpg);
+    height: 40rem;
+    background-position: center center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+}
+
 .contenido-contacto {
-	flex: 1;
-	color: white;
+    flex: 1;
+    color: white;
 }
+
 .contenido-contacto p {
-	font-size: 1.8rem;
+    font-size: 1.8rem;
 }
 
+/* Seccion inferior */
+.seccion-inferior {
+    display: flex;
+    justify-content: space-between;
+}
 
+.seccion-inferior .blog {
+    flex-basis: 60%;
+}
+
+.seccion-inferior .testimoniales {
+    flex-basis: calc(40% - 2rem);
+}
+
+.entrada-blog {
+    display: flex;
+	justify-content: space-between;
+	margin-bottom: 2rem;
+}
+
+.entrada-blog .imagen {
+    flex-basis: 40%;
+}
+
+.entrada-blog .texto-entrada {
+    flex-basis: calc(60% - 3rem);
+}
+.texto-entrada a {
+	color: black;
+	text-decoration: none;
+}
+.texto-entrada h4{
+	margin: 0;
+	line-height: 1.4;
+}
+.texto-entrada h4::after{
+	content: '';
+	display: block;
+	width: 15rem;
+	height: .5rem;
+	background-color: #71B100;
+	margin-top: 1rem;
+}
+.texto-entrada em {
+	color: #E08709;
+}
+/* Testimoniales */
+.testimonial {
+	background-color: #71B100;
+	font-size: 2.4rem;
+	padding: 2rem;
+	color: white;
+	border-radius: 2rem;
+}
+.testimonial p {
+	text-align: right;
+}
+.testimonial blockquote::before{
+	content: '';
+	background-image: url(../img/comilla.svg);
+	width: 4rem;
+	height: 4rem;
+	display: block;
+	position: absolute;
+	top: -2rem;
+}
+.testimonial blockquote{
+	position: relative;
+	padding-left: 5rem;
+}
