--- a/bienes raices/css/custom.css
+++ b/bienes raices/css/custom.css
@@ -85,6 +85,11 @@ p{
 }
 
 /* Header */
+.site-header{
+	background-color: #333333;
+	padding: 1rem 0 3rem 0 ;
+
+}
 .site-header.inicio {
     background-image: url(../img/header.jpg);
     background-position: center center;
@@ -150,13 +155,17 @@ p{
 /** Anuncios **/
 .contenedor-anuncios {
     display: flex;
-    justify-content: space-between;
+	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
 .anuncio {
+	flex-grow: 0;
+	flex-shrink: 0;
     flex-basis: calc(33.3% - 1rem);
     border: 1px solid #B5B5B5;
-    background-color: #F5F5F5;
+	background-color: #F5F5F5;
+	margin-bottom: 2rem;
 }
 
 .contenido-anuncio {
@@ -297,4 +306,17 @@ p{
 .copyright{
     margin: 0; 
     color: white; 
+}
+
+/* Internas */
+.contenido-nosotros{
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 2rem;
+}
+.texto-nosotros blockquote {
+	font-weight: 900;
+	font-size: 2rem;
+	margin: 0;
+	padding: 1rem 0 3rem 0;
 }
