--- a/blog cafe/css/styles.css
+++ b/blog cafe/css/styles.css
@@ -18,10 +18,13 @@ body{
 .contenedor{
 	max-width: 1200px;
 	margin: 0 auto;
+	width: 95%;
+	position: relative;
 }
 
 h1,h2,h3, h4{
 	font-family: 'PT Sans', sans-serif;
+	line-height: 1.2;
 }
 
 h1{
@@ -46,6 +49,46 @@ img{
 .no-margin {
 	margin: 0;
 }
+/*Grid */
+
+@media (min-width: 768px) {
+	.grid{
+		display: flex;
+		justify-content: space-between;
+	}
+	.columnas-6{
+		flex: 0 0 calc(50% - 1rem);
+	}
+}
+
+
+/* Botones */
+.btn{
+	display: block;
+	text-align: center;
+	padding: 1rem 3rem;
+	margin: 2rem 0 ; 
+	color: white;
+	text-decoration: none;
+	font-family: 'PT Sans' , sans-serif;
+	font-weight: 700;
+	text-transform: uppercase;
+	font-size: 2rem;
+
+}
+@media (min-width: 768px) {
+	.btn{
+		display: inline-block;
+	}
+}
+.btn-primario{
+	background-color: black;
+}
+.btn-secundario{
+	background-color: #784d3c;
+}
+
+
 /** Header**/
 @media ( min-width: 768px ) {
 	.barra{
@@ -56,11 +99,20 @@ img{
 }
 
 .site-header{
-	background-image: url(../img/banner.jpg);
+	background-image: url(../img/banner1.jpg);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
 	height: 60rem;
+	position: relative;
+}
+.site-header::before{
+	content: '';
+	width: 100%;
+	height: 100%;
+	background: #00000070;
+	display: block;
+	position: absolute;
 }
 .site-header a {
 	color: #ffffff;
@@ -77,6 +129,8 @@ img{
 	text-align: center;
 	display: block;
 	font-size: 1.8rem;
+	color: white;
+	text-decoration: none;
 }
 @media (min-width: 768px) {
 	.navegacion a {
@@ -101,3 +155,91 @@ img{
 .texto-header p {
 	font-size: 2.2rem;
 }
+
+/** Contenido Principal  **/
+
+.contenido-pincipal{
+	display: flex;
+	flex-wrap: wrap;
+}
+.blog, .cursos{
+	flex: 0 0 100%;
+}
+.cursos{
+	order: -1;
+}
+@media (min-width: 768px) {
+	.contenido-pincipal{
+		justify-content: space-between;
+	}
+	.blog{
+		flex-basis: 66.6%;
+	}
+	.cursos{
+		flex-basis: calc(33.3% - 4rem);
+		order: 2;
+	}
+}
+
+/** Opcional **/
+
+/* .entrada-blog{
+	display: flex;
+	justify-content: space-between;
+}
+.entrada-blog .imagen{
+	flex: 0 0 40%;
+}
+.entrada-blog .contenido-blog{
+	flex: 0 0 calc(60% - 2rem);
+} */
+
+.entrada-blog{
+	margin-bottom: 2rem; 
+	border-bottom: 1px solid #e1e1e1;
+}
+.entrada-blog:last-of-type{
+	border: none;
+}
+/** Curos Lista **/
+
+.cursos-lista{
+	padding: 0;
+	list-style: none;
+}
+.curso{
+	padding-bottom: 3rem;
+	border-bottom: 1px solid #e1e1e1;
+}
+.curso:last-of-type{
+	border-bottom: none;
+}
+.curso p {
+	font-family: 'PT Sans' , sans-serif;
+	font-weight: 700;
+	font-size: 2rem;
+}
+.curso p span, 
+.curso p.descripcion {
+	font-weight: 400;
+}
+
+.site-footer{
+	background-color: black;
+	padding: 3rem;
+	margin-top: 4rem;
+}
+
+.site-footer p {
+	color: white;
+	font-size: 4rem;
+	font-weight: 400;
+	font-family: 'PT Sans' , sans-serif;
+	text-align: center;
+}
+.site-footer p span{
+	font-weight: 700;
+}
+
+
+
